--- a/react-app/src/components/styles/Board.css
+++ b/react-app/src/components/styles/Board.css
@@ -2,4 +2,40 @@
     display: block;
     margin-top: 15vw;
     padding-top: 2vw;
+
+    user-select: none;
+    white-space: nowrap;
+    margin-bottom: 8px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    padding-bottom: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.border-1 {
+    border: 2px solid blue;
+}
+
+.border-2 {
+    border: 2px solid red;
+}
+
+.list-container{
+    display: flex;
+    flex-direction: row;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px
+
+}
+
+.boardDroppable{
+    display: flex;
+    flex-direction: row;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
 }
