--- a/react-app/src/components/styles/LoginForm.css
+++ b/react-app/src/components/styles/LoginForm.css
@@ -4,6 +4,48 @@
 }
 
 .loginform{
+    padding: 1px;
+    display: flex;
+    flex-direction: column;
+ align-items: center;
+ justify-content: center;
+}
+
+.LoginFormTitle{
     margin-top: 10vw;
     padding: 1px
+}
+
+.logindiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black
+}
+
+.formdiv {
+    padding: 10px;
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.forminput{
+    border: 2px solid green;
+    border-radius: 4px;
+}
+
+.formbutton {
+    padding: 15px;
+    background-color: pink;
+}
+
+.buttondiv {
+    display: flex;
+    align-items: center;
+    width: 50vw;
+    justify-content: center;
 }
