--- a/react-app/src/components/styles/Home.css
+++ b/react-app/src/components/styles/Home.css
@@ -1,3 +1,21 @@
 .row-home {
-    margin-top: 100px
+    margin-top: 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+.HomeTitle{
+
+    padding: 1px
+}
+
+.boardbutton{
+    padding: 10px;
+    font-size: 15px;
+    background-color: lightpink;
+    border-radius: 10px;
 }
