--- a/react-app/src/components/styles/List.css
+++ b/react-app/src/components/styles/List.css
@@ -6,9 +6,27 @@
     padding: 10px;
     align-items: center;
     justify-content: center;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: red;
 
 }
 
 .border-2{
     border: 2px solid red;
+    padding: 5px;
+    margin:5px;
+    background-color: white;
+}
+
+.listbutton{
+    margin: 10px;
+    padding: 10px;
+    font-size: 15px;
+    background-color: lightpink;
+    border-radius: 10px;
+}
+
+.listmodalinput{
+    min-width: 90%;
 }
