--- a/react-app/src/components/styles/Card.css
+++ b/react-app/src/components/styles/Card.css
@@ -6,6 +6,9 @@
 }
 
 .cardbutton {
+    margin: 10px;
+    padding: 10px;
+    font-size: 15px;
     background-color: yellow;
-    border-radius: 5px;
+    border-radius: 10px;
 }
