--- a/react-app/src/components/styles/SignUpForm.css
+++ b/react-app/src/components/styles/SignUpForm.css
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
 }
 
@@ -49,4 +50,10 @@
     align-items: center;
     width: 50vw;
     justify-content: center;
+}
+
+.errormsg{
+    padding:7px;
+    color: red;
+    background-color: yellow;
 }
