--- a/react-app/src/components/styles/Card.css
+++ b/react-app/src/components/styles/Card.css
@@ -13,6 +13,21 @@
     border-radius: 10px;
 }
 
+.cardbutton-div {
+    display: flex;
+    justify-content: flex-end;
+}
+.checklistbutton{
+    padding: 1px 10px;
+    margin: 5px;
+    border-radius: 8px;
+    background-color: green;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    font-family: monospace;
+    align-content: center;
+}
 .cardnameedit {
     display: flex;
     flex-direction: row;
