--- a/react-app/src/components/styles/Footer.css
+++ b/react-app/src/components/styles/Footer.css
@@ -3,15 +3,30 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: yellow;
+    background-color: wheat;
     color: white;
     text-align: center;
     padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
 }
 
 .footeratag {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     padding: 5px;
-    border: 3px solid black;
+    border: 3px solid black; */
+    font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  text-decoration: none;
+  padding: 10px;
+  margin: 10px;
+  background-color: #90d4ed;
+text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+border: 2px solid black;
+border-radius: 20px;
+  color: white;
 }
