--- a/react-app/src/components/styles/Home.css
+++ b/react-app/src/components/styles/Home.css
@@ -1,13 +1,21 @@
 .row-home {
-    margin-top: 10vw;
+    margin-top: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 2px solid black;
     border-radius: 10px;
+    width: 80%;
+    margin-left: 10%;
 }
 
+.justingif{
+
+    border: 2px solid blue;
+    border-radius: 10px;
+    margin: 15px;
+}
 .HomeTitle{
 
     padding: 1px
