--- a/react-app/src/components/styles/Board.css
+++ b/react-app/src/components/styles/Board.css
@@ -1,11 +1,12 @@
 
 
 .boardcontainer {
+    position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 10px;
     margin-bottom: 100px;
-    padding-top: 100px;
+    padding-top: 20px;
     padding-bottom: 50px;
     align-items: center;
     justify-content: center;
