--- a/react-app/src/components/styles/NavBar.css
+++ b/react-app/src/components/styles/NavBar.css
@@ -54,6 +54,7 @@ html {
 text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   border-radius: 20px;
   color: white;
+  border: 2px solid black;
 }
 
 .navbardiv {
