--- a/react-app/src/components/styles/Home.css
+++ b/react-app/src/components/styles/Home.css
@@ -10,6 +10,28 @@
     margin-left: 10%;
 }
 
+.row-home-1{
+    margin-top: 100px;
+    height: 90vh;
+    display: flex;
+    flex-direction: row;
+
+
+}
+
+.col-0{
+    background-color: #90d4ed;;
+    width: 60%;
+}
+
+.col-1{
+    background-color: black;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .justingif{
 
     border: 2px solid blue;
@@ -18,7 +40,9 @@
 }
 .HomeTitle{
 
-    padding: 1px
+    padding: 1px;
+    color: white;
+    font-size: 50px;
 }
 
 .boardbutton{
