--- a/react-app/src/components/styles/Card.css
+++ b/react-app/src/components/styles/Card.css
@@ -9,7 +9,7 @@
     margin: 10px;
     padding: 5px;
     font-size: 15px;
-    background-color: yellow;
+    background-color: rgb(100, 190, 226);
     border-radius: 10px;
 }
 
