--- a/react-app/src/components/styles/SignUpForm.css
+++ b/react-app/src/components/styles/SignUpForm.css
@@ -13,16 +13,27 @@
 }
 
 .signupcontainer{
- display: flex;
- flex-direction: column;
- align-items: center;
- justify-content: center;
- border: 2px solid black
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    height: 97vh;
+    background-image: linear-gradient( #2585c4, #56dbc9 , wheat);
+}
+
+.label0{
+    font-size: 2vh;
+    color: wheat;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 .SignUpFormTitle{
-    margin-top: 10vw;
-    padding: 1px
+    color: wheat;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    font-size: 6em;
+    padding: 2vh;
+    text-decoration: underline;
 }
 
 .formdiv {
